Init Dashboard & Sales Report

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
@@ -28,6 +28,14 @@
                 <view:RecoverPasswordView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:DashboardViewModel}">
+                <view:DashboardView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SalesReportViewModel}">
+                <view:SalesReportView/>
+            </DataTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
