Order Management View Created

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
@@ -35,6 +35,10 @@
             <DataTemplate DataType="{x:Type viewModel:SalesReportViewModel}">
                 <view:SalesReportView/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:OrderMangementViewModel}">
+                <view:OrderManagementView/>
+            </DataTemplate>
             
         </ResourceDictionary>
     </Application.Resources>
