OrderDetailView and ViewModel Structure created

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/App.xaml
@@ -39,7 +39,11 @@
             <DataTemplate DataType="{x:Type viewModel:OrderMangementViewModel}">
                 <view:OrderManagementView/>
             </DataTemplate>
-            
+
+            <DataTemplate DataType="{x:Type viewModel:OrderDetailViewModel}">
+                <view:OrderDetailView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
