--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/CategoryManagementView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/CategoryManagementView.xaml
@@ -1,32 +1,31 @@
-﻿<UserControl x:Class="HMQL_Project01_QuanLyBanHang.MVVM.View.OrderCreateView"
+﻿<UserControl x:Class="HMQL_Project01_QuanLyBanHang.MVVM.View.CategoryManagementView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HMQL_Project01_QuanLyBanHang.MVVM.View"
-             xmlns:viewmodel="clr-namespace:HMQL_Project01_QuanLyBanHang.MVVM.ViewModel" 
-             d:DataContext="{d:DesignInstance Type=viewmodel:OrderCreateViewModel}"
+            
              mc:Ignorable="d" 
              d:DesignHeight="1544" d:DesignWidth="776">
 
+
+
     <Grid>
+
         <Border Background="#FFF1F4FA"
                 CornerRadius="24"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-
-        <DockPanel>
-            <TextBlock DockPanel.Dock ="Top" Text="Order Detail"
+            <StackPanel >
+                <TextBlock Text="Order Management"
                        FontSize="24" FontWeight="Bold" 
                        Margin="32 16 32 0"/>
-            <StackPanel DockPanel.Dock="Left">
-
                 <Border Height="117"     
                     HorizontalAlignment="Left"
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
-                    Margin="16" Width="500">
+                    Margin="16" Width="277">
                     <DockPanel Margin="16">
                         <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
                             <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
@@ -40,22 +39,14 @@
                                 </Rectangle.OpacityMask>
                             </Rectangle>
                         </Canvas>
-                            <StackPanel>
-                                <!--Search Textbox-->
-                                <WrapPanel HorizontalAlignment="Left">
-                                    <TextBlock Text="Customer Name:" Margin="20 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False" />
 
-                                    <TextBox Name="nameTextBox" Width="257"/>
-                                </WrapPanel>
-                                <!--Search Textbox-->
-                                <WrapPanel HorizontalAlignment="Left">
-                                    <TextBlock  Text="Address:"  Margin="20 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False" />
-
-                                    <TextBox Name="addressTextBox" Width="300"/>
-                                </WrapPanel>
-                            </StackPanel>
-                           
-                        </DockPanel>
+                        <TextBlock Text="20+"
+                               FontSize="22" FontWeight="DemiBold"
+                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
+                        <TextBlock Text="Đơn hàng trong 1 tháng"
+                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
+                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
+                    </DockPanel>
                 </Border>
 
                 <WrapPanel  Margin=" 16 4 16 4">
@@ -87,6 +78,9 @@
                         <Border.InputBindings>
                             <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
                         </Border.InputBindings>
+                        <TextBlock Text="Refresh" 
+                               FontSize="12" FontWeight="DemiBold" Foreground="#000000"
+                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
 
                     <!--Sign In Button-->
@@ -111,9 +105,8 @@
                     BorderBrush="LightGray"
                     Margin="16">
 
-                    <DataGrid Grid.Row="10"  FontSize="12" FontWeight="SemiBold" 
-                             Margin="0,10,0,0" BorderThickness="0" AlternatingRowBackground="#788B9A" Width="500
-                                  ">
+                    <DataGrid Grid.Row="10" FontSize="12" FontWeight="SemiBold" 
+                              HorizontalAlignment="Center" Margin="0 10 0 0" BorderThickness="0" AlternatingRowBackground="#788B9A">
                         <DataGrid.CellStyle>
                             <Style TargetType="{x:Type DataGridCell}">
                                 <Setter Property="Background" Value="#F1F1F1" />
@@ -222,148 +215,7 @@
 
 
             </StackPanel>
-            <StackPanel DockPanel.Dock="Right">
-                <!--Status-->
-                <Border Height="117"     
-                    Background="White"
-                    CornerRadius="12"
-                    BorderThickness="1"
-                    BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
 
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!--Date-->
-                <Border Height="117"     
-                    Background="White"
-                    CornerRadius="12"
-                    BorderThickness="1"
-                    BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
-
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-                            <StackPanel VerticalAlignment="Center">
-                           
-                            <TextBox Name="TextBox" Width="150"/>
-                            <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-
-                            </StackPanel>
-                        </DockPanel>
-                </Border>
-                <!--Total Number-->
-                <Border Height="117"     
-                    Background="White"
-                    CornerRadius="12"
-                    BorderThickness="1"
-                    BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
-
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!--Total Price-->
-                <Border Height="117"     
-                    Background="White"
-                    CornerRadius="12"
-                    BorderThickness="1"
-                    BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
-
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!-- Cancel Change Button-->
-                <Border
-                        Background="#FF3A36DB"
-                        CornerRadius="4">
-                    <Border.InputBindings>
-                        <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
-                    </Border.InputBindings>
-                    <TextBlock Text="Add Order" 
-                               FontSize="12" FontWeight="DemiBold" Foreground="White"
-                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
-                <!--Confirm Change Button-->
-                <Border
-                        Background="#FF3A36DB"
-                        CornerRadius="4">
-                    <Border.InputBindings>
-                        <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
-                    </Border.InputBindings>
-                    <TextBlock Text="Add Order" 
-                               FontSize="12" FontWeight="DemiBold" Foreground="White"
-                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
-            </StackPanel>
-        </DockPanel>
         </ScrollViewer>
     </Grid>
 </UserControl>
